fix: note in develop

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <script>
+    // in develop branch
     // INTRO SET-UP
     // Tempat deklarasi variable
 
     // Tempat deklarasi function
 
     // 1. Fitur tambah data
-    
+
     // 2. Fitur lihat data
 </script>
